Fixes dark mode for bowType User profile form works Layout styles on user page Change edit profile button to icon

--- a/src/pages/user/User.module.css
+++ b/src/pages/user/User.module.css
@@ -9,7 +9,7 @@
     justify-content: space-between;
 }
 .name {
-    font-size: 1.6rem;
+    font-size: 1.4rem;
 }
 .profileData {
     display: flex;
